--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
@@ -23,3 +24,6 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
+
+# Bower dependency
+bower_components
