--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Skeletor",
   "version": "0.0.1",
   "description": "Estructura para un proyecto basado en jade, stylus y coffeeScript",
+  "repository" : "https://github.com/weriklandia/skeletor.git",
   "main": "index.html",
   "dependencies": {
     "gulp": "^3.8.7",
@@ -10,10 +11,16 @@
     "gulp-stylus": "^1.3.0"
   },
   "devDependencies": {
-    "gulp-concat-css": "^0.1.4",
-    "gulp-livereload": "^2.1.0",
+    "browser-sync": "^1.3.6",
+    "del": "^0.1.2",
+    "gulp-if": "^1.2.4",
+    "gulp-jshint": "^1.8.4",
+    "gulp-load-plugins": "^0.6.0",
+    "gulp-size": "^1.1.0",
     "gulp-util": "^3.0.0",
     "jeet": "^5.3.0",
+    "jshint-stylish": "^0.4.0",
+    "run-sequence": "^0.3.6",
     "rupture": "^0.3.0"
   },
   "scripts": {
