--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "Skeletor",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "authors": [
     "Erik Flores <erikfloresq@gmail.com>"
   ],
@@ -16,11 +16,10 @@
   "dependencies": {
     "html5shiv": "~3.7.2",
     "jquery": "1.11.1",
-    "normalize-css": "~3.0.1",
-    "parsleyjs": "~2.0.3"
+    "normalize-css": "~3.0.1"
   },
   "devDependencies": {
-    "angular": "1.2.23",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "jquery-validation": "~1.13.1"
   }
 }
