--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Skeletor",
   "version": "0.0.2",
   "description": "Estructura para un proyecto basado en jade, stylus y coffeeScript",
-  "repository" : "https://github.com/weriklandia/skeletor.git",
+  "repository": "https://github.com/weriklandia/skeletor.git",
   "main": "index.html",
   "dependencies": {
     "gulp": "^3.8.7",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "browser-sync": "^1.3.6",
     "del": "^0.1.2",
+    "gulp-concat": "^2.4.3",
     "gulp-if": "^1.2.4",
     "gulp-jshint": "^1.8.4",
     "gulp-load-plugins": "^0.6.0",
