--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "repository": "https://github.com/weriklandia/skeletor.git",
   "main": "index.html",
   "dependencies": {
-    "gulp": "^3.8.7",
-    "gulp-coffee": "^2.1.1",
-    "gulp-jade": "^0.7.0",
-    "gulp-stylus": "^1.3.0"
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.4",
+    "gulp-pug": "^3.3.0",
+    "gulp-stylus": "^2.6.0"
   },
   "devDependencies": {
-    "browser-sync": "^1.3.6",
-    "del": "^0.1.2",
-    "gulp-concat": "^2.4.3",
-    "gulp-if": "^1.2.4",
-    "gulp-jshint": "^1.8.4",
-    "gulp-load-plugins": "^0.6.0",
-    "gulp-size": "^1.1.0",
-    "gulp-util": "^3.0.0",
-    "gulp.spritesmith": "^2.4.0",
-    "jeet": "^5.3.0",
-    "jshint-stylish": "^0.4.0",
-    "nib": "^1.1.0",
-    "node-gyp": "^1.0.2",
-    "run-sequence": "^0.3.6",
-    "rupture": "^0.3.0"
+    "browser-sync": "^2.18.8",
+    "del": "^2.2.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-jshint": "^2.0.4",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-size": "^2.1.0",
+    "gulp-util": "^3.0.8",
+    "gulp.spritesmith": "^6.4.0",
+    "jeet": "^7.1.0",
+    "jshint-stylish": "^2.2.1",
+    "nib": "^1.1.2",
+    "node-gyp": "^3.6.0",
+    "run-sequence": "^1.2.2",
+    "rupture": "^0.6.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
