--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Skeletor",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Estructura para un proyecto basado en jade, stylus y es2015",
   "repository": "https://github.com/erikfloresq/skeletor.git",
   "main": "index.html",
@@ -26,6 +26,7 @@
     "eslint": "^3.8.1",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
+    "babel-core": "^6.17.0",
     "babel-preset-es2015": "^6.24.1"
   },
   "scripts": {
