--- a/package.json
+++ b/package.json
@@ -5,29 +5,29 @@
   "repository": "https://github.com/erikfloresq/skeletor.git",
   "main": "index.html",
   "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-pug": "^3.3.0",
-    "gulp-stylus": "^2.6.0"
+    "gulp-babel": "8.0.0",
+    "gulp-pug": "4.0.1",
+    "gulp-stylus": "2.7.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
-    "del": "^2.2.2",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.26.3",
+    "del": "^4.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-size": "^2.1.0",
+    "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "gulp.spritesmith": "^6.4.0",
+    "gulp.spritesmith": "^6.9.0",
     "nib": "^1.1.2",
-    "node-gyp": "^3.6.0",
-    "run-sequence": "^1.2.2",
-    "rupture": "^0.6.2",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
-    "babel-core": "^6.17.0",
-    "babel-preset-es2015": "^6.24.1"
+    "node-gyp": "^3.8.0",
+    "run-sequence": "^2.2.1",
+    "rupture": "^0.7.1"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
