--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "https://github.com/erikfloresq/skeletor.git",
   "main": "index.html",
   "dependencies": {
+    "@babel/core": "^7.5.5",
+    "acorn": "^6.2.1",
     "gulp-babel": "8.0.0",
     "gulp-pug": "4.0.1",
     "gulp-stylus": "2.7.0"
@@ -13,19 +15,18 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
-    "del": "^4.1.0",
+    "del": "^4.1.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "gulp": "^4.0.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
-    "gulp-load-plugins": "^2.0.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "gulp.spritesmith": "^6.10.1",
     "nib": "^1.1.2",
-    "node-gyp": "^5.0.2",
+    "node-gyp": "^5.0.3",
     "run-sequence": "^2.2.1",
     "rupture": "^0.7.1"
   },
