--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "repository": "https://github.com/erikfloresq/skeletor.git",
   "main": "index.html",
   "dependencies": {
-    "@babel/core": "^7.5.5",
     "acorn": "^6.2.1",
-    "gulp-babel": "8.0.0",
     "gulp-pug": "4.0.1",
     "gulp-stylus": "2.7.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/register": "^7.5.5",
     "browser-sync": "^2.26.7",
     "del": "^4.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-if": "^2.0.2",
     "gulp-load-plugins": "^2.0.1",
@@ -33,6 +33,9 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "babel": {
+    "presets": ["@babel/preset-env"]
   },
   "author": "erik flores",
   "license": "MIT"
