--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "repository": "https://github.com/erikfloresq/skeletor.git",
   "main": "index.html",
   "dependencies": {
-    "acorn": "^6.2.1",
+    "acorn": "^6.3.0",
     "gulp-pug": "4.0.1",
     "gulp-stylus": "2.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
     "browser-sync": "^2.26.7",
     "del": "^4.1.1",
     "eslint": "^5.16.0",
@@ -26,7 +26,7 @@
     "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.8",
     "nib": "^1.1.2",
-    "node-gyp": "^5.0.3",
+    "node-gyp": "^5.0.4",
     "run-sequence": "^2.2.1",
     "rupture": "^0.7.1"
   },
@@ -35,7 +35,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "author": "erik flores",
   "license": "MIT"
