--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "main": "index.html",
   "dependencies": {
     "acorn": "^6.4.1",
-    "gulp-pug": "4.0.1",
+    "gulp-pug": "^1.3.1",
     "gulp-stylus": "2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/register": "^7.9.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.11.1",
     "del": "^4.1.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
